ft: trying to fix react error eslint

--- a/src/styles/abscracts/variables.less
+++ b/src/styles/abscracts/variables.less
@@ -19,14 +19,12 @@
 @full-content-height: calc(100vh - calc(@auth-padding * 2) - @navbar-height - @scroll-margin-error);
 
 :root {
-  --primary-color: #2E8B57;
-  --secondary-color: #00A6A1;
-  --text-color: #24292F;
+  --primary-color: #0AA9A8;
+  --text-color: #96989A;
   --button-text-color: #F5F6F7;
-  --text-color-opaque: #24292f80;
-  --table-color: #FFFFFF;
-  --background-color: #f5f5f5;
-  --navbar-color: #CCCCCC;
-  --card-color: #F0F0F0;
+  --text-color-opaque: #E6E7E880;
+  --background-color: #FEFEFE;
+  --navbar-color: #DDDDDD;
+  --card-color: #E6E7E8;
   --border-color: #D3D3D3;
 }
