--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,2 +1,6 @@
 @import './base/base.less';
 @import './abscracts/variables.less';
+@import './base/typography.less';
+@import './helpers/layout-helper.less';
+
+@import './layouts/layout.less';
