some changes to header and working on i18n to work

--- a/src/styles/helpers/layout-helper.less
+++ b/src/styles/helpers/layout-helper.less
@@ -859,6 +859,10 @@
   width: 25%;
 }
 
+.w-20 {
+  width: 20%;
+}
+
 .h-50 {
   height: 50%;
 }
@@ -1069,6 +1073,10 @@
 
 .font-20 {
   font-size: 20px;
+}
+
+.capitalize {
+  text-transform: uppercase;
 }
 
 .overflow-x {
