--- a/src/styles/layouts/layout.less
+++ b/src/styles/layouts/layout.less
@@ -1,5 +1,23 @@
+.base-layout {
+
+  &__main-content {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    overflow: auto;
+  }
+
+  &__content {
+    padding: 1rem;
+    
+    @media @tab-md {
+      padding: 0.625rem;
+    }
+  }
+}
+
 .layout-header {
-  padding: 2rem 5rem;
+  padding: 2rem;
   align-items: center;
 
   &__button {
@@ -7,6 +25,18 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100%;
+    height: 4rem;
+    color: var(--primary-color);
+    background-color: var(--card-color) !important;
+
+    &--svg {
+      color: var(--primary-color);
+    }
+  }
+
+
+  &__divider {
+    border-color: var(--primary-color);
+    border-width: 2px;
   }
 }
